# whitenoise-rmp

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
android/: .gitignore  (+2 more)
rust/: .gitignore  Cargo.toml
rust/src/: accounts.rs  database.rs  key_packages.rs  lib.rs  logging.rs  runtime.rs  tests.rs  whitenoise.rs
rust/src/commands/: mod.rs
rust/src/commands/accounts/: create_identity.rs  fetch_relays_list.rs  get_accounts.rs  get_nostr_wallet_connect_balance.rs  has_nostr_wallet_connect_uri.rs  login.rs  logout.rs  publish_metadata_event.rs  remove_nostr_wallet_connect_uri.rs  set_active_account.rs  set_nostr_wallet_connect_uri.rs  update_account_onboarding.rs
rust/src/commands/groups/: create_group.rs  delete_message.rs  get_active_groups.rs  get_group.rs  get_group_admins.rs  get_group_and_messages.rs  get_group_members.rs  get_group_relays.rs  rotate_key_in_group.rs  send_mls_message.rs
rust/src/commands/key_packages/: delete_all_key_packages.rs  publish_new_key_package.rs  valid_key_package_exists_for_user.rs
rust/src/commands/media/: upload_file.rs  upload_media.rs
rust/src/commands/messages/: query_message.rs
rust/src/commands/nostr/: decrypt_content.rs  encrypt_content.rs  export_nsec.rs  fetch_contacts_with_metadata.rs  fetch_enriched_contact.rs  fetch_enriched_contacts.rs  fetch_relays.rs  init_nostr_for_current_user.rs  invite_to_white_noise.rs  publish_relay_list.rs  query_contacts_with_metadata.rs  (+3 more)
rust/src/media/: mod.rs
rust/src/nostr_manager/: event_processor.rs  mod.rs  search.rs
ui-tests/: Cargo.toml
ui-tests/src/: main.rs
(+25 files in other folders)
