[package]
name = "ui-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
appium-client = { path = "/Users/justin/code/appium-client" }
anyhow = "1.0"
